Set up repositories-service-handler connection for user. Cleaned up the classes and logic. Updated Readme
